Use StringUtils and String.join