@@ -3,6 +3,7 @@ package uk.gov.companieshouse.chs.gov.uk.notify.integration.api.letterdispatcher
 import static uk.gov.companieshouse.chs.gov.uk.notify.integration.api.utils.LoggingUtils.createLogMap;
 
 import java.io.IOException;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Component;
 import uk.gov.companieshouse.api.chs.notification.model.Address;
 import uk.gov.companieshouse.chs.gov.uk.notify.integration.api.mongo.service.NotificationDatabaseService;
@@ -59,11 +60,11 @@ public class LetterDispatcher {
                 personalisationDetailsString,
                 contextId);
         String govNotifyReference;
-        if (letterId == null || letterId.isBlank()) {
+        if (StringUtils.isBlank(letterId)) {
             // Old letters do not have letter IDs and expect just the reference
             govNotifyReference = reference;
         } else {
-            govNotifyReference = appId + "-" + letterId + "-" + reference;
+            govNotifyReference = String.join("-", appId, letterId, reference);
         }
         return sendLetterPdf(postage, govNotifyReference, contextId, letter);
     }
